Added why I enjoy this class.

--- a/kboyda.html
+++ b/kboyda.html
@@ -2,5 +2,6 @@
 <head><title> Git Test Page </title></head>
 <body>
 Hello world! This is Kyle Boyda.
+I really enjoy this class and I especially enjoy taking 3 classes with Mike Colbert this semester.
 </body>
 </html>
