Set the background color to pink.

--- a/kboyda.html
+++ b/kboyda.html
@@ -1,5 +1,8 @@
 <html>
-<head><title> Git Test Page </title></head>
+<head>
+<title> Git Test Page </title>
+<link rel="stylesheet" type="text/css" href="style.css" />
+</head>
 <body>
 Hello world! This is Kyle Boyda.
 I really enjoy this class and I especially enjoy taking 3 classes with Mike Colbert this semester.
